@@ -1,6 +1,7 @@
 ---
 language: perl
 perl:
+  - 5.30
   - 5.28
   - 5.26
   - 5.24
